--- a/MonthlyStatement/MonthlyStatement.csproj
+++ b/MonthlyStatement/MonthlyStatement.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Areas\Personal\Controllers\ReportController.cs" />
     <Compile Include="Areas\Personal\Controllers\StaticController.cs" />
     <Compile Include="Areas\Personal\PersonalAreaRegistration.cs" />
+    <Compile Include="Areas\Secretary\SecretaryAreaRegistration.cs" />
     <Compile Include="Areas\Staff\Controllers\CommentsStaffController.cs" />
     <Compile Include="Areas\Staff\Controllers\FormStaffReportController.cs" />
     <Compile Include="Areas\Staff\Controllers\StaffReportController.cs" />
@@ -1254,6 +1255,9 @@
     <Content Include="Areas\Department\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Department\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Department\Views\Statistical\Index.cshtml" />
+    <Content Include="Areas\Secretary\Views\web.config" />
+    <Content Include="Areas\Secretary\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Secretary\Views\Shared\_Layout.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -1289,6 +1293,8 @@
     <Folder Include="Areas\Personal\Data\" />
     <Folder Include="Areas\Personal\Views\NotificationPersonal\" />
     <Folder Include="Areas\Personal\Views\Shared\" />
+    <Folder Include="Areas\Secretary\Controllers\" />
+    <Folder Include="Areas\Secretary\Data\" />
     <Folder Include="Areas\Staff\Data\" />
     <Folder Include="Areas\Staff\Views\Shared\" />
     <Folder Include="assets\FileImport\" />
