--- a/MonthlyStatement/MonthlyStatement.csproj
+++ b/MonthlyStatement/MonthlyStatement.csproj
@@ -222,7 +222,6 @@
     <Compile Include="Areas\Department\Controllers\StatisticalController.cs" />
     <Compile Include="Areas\Department\DepartmentAreaRegistration.cs" />
     <Compile Include="Areas\FacultyAreas\Controllers\FacManagerController.cs" />
-    <Compile Include="Areas\FacultyAreas\Controllers\FacReportController.cs" />
     <Compile Include="Areas\FacultyAreas\Controllers\StatisticalController.cs" />
     <Compile Include="Areas\FacultyAreas\FacultyAreasAreaRegistration.cs" />
     <Compile Include="Areas\Personal\Controllers\CommentsPersonalController.cs" />
@@ -231,6 +230,7 @@
     <Compile Include="Areas\Personal\Controllers\ReportController.cs" />
     <Compile Include="Areas\Personal\Controllers\StaticController.cs" />
     <Compile Include="Areas\Personal\PersonalAreaRegistration.cs" />
+    <Compile Include="Areas\Secretary\Controllers\CheckReportDepartmentController.cs" />
     <Compile Include="Areas\Secretary\SecretaryAreaRegistration.cs" />
     <Compile Include="Areas\Staff\Controllers\CommentsStaffController.cs" />
     <Compile Include="Areas\Staff\Controllers\FormStaffReportController.cs" />
@@ -1218,10 +1218,6 @@
     <Content Include="Areas\FacultyAreas\Views\FacManager\FacMember.cshtml" />
     <Content Include="Areas\Admin\Views\Statistical\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Notification\Index.cshtml" />
-    <Content Include="Areas\FacultyAreas\Views\FacReport\Index.cshtml" />
-    <Content Include="Areas\FacultyAreas\Views\FacReport\FacReportPerior.cshtml" />
-    <Content Include="Areas\FacultyAreas\Views\FacReport\FacManagerReportPerAndDep.cshtml" />
-    <Content Include="Areas\FacultyAreas\Views\FacReport\FacManagerReportPer.cshtml" />
     <Content Include="Areas\Department\Views\web.config" />
     <Content Include="Areas\Staff\Views\web.config" />
     <Content Include="Areas\Staff\Views\FormStaffReport\Index.cshtml" />
@@ -1257,9 +1253,13 @@
     <Content Include="Areas\Department\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Department\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Department\Views\Statistical\Index.cshtml" />
+    <Content Include="Areas\FacultyAreas\Views\FacManager\Edit.cshtml" />
     <Content Include="Areas\Secretary\Views\web.config" />
     <Content Include="Areas\Secretary\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Secretary\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Secretary\Views\CheckReportDepartment\Index.cshtml" />
+    <Content Include="Areas\Secretary\Views\CheckReportDepartment\Detail.cshtml" />
+    <Content Include="Areas\FacultyAreas\Views\FacManager\EditRole.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -1296,7 +1296,6 @@
     <Folder Include="Areas\Personal\Data\" />
     <Folder Include="Areas\Personal\Views\NotificationPersonal\" />
     <Folder Include="Areas\Personal\Views\Shared\" />
-    <Folder Include="Areas\Secretary\Controllers\" />
     <Folder Include="Areas\Secretary\Data\" />
     <Folder Include="Areas\Staff\Data\" />
     <Folder Include="Areas\Staff\Views\NotificationStaff\" />
