--- a/MonthlyStatement/Web.config
+++ b/MonthlyStatement/Web.config
@@ -21,8 +21,7 @@
     <add key="ida:TenantId" value="3011a54b-0a5d-4929-bf02-a00787877c6a" />
   </appSettings>
   <system.web>
-    <sessionState cookieSameSite="None">
-    </sessionState>
+    <sessionState cookieSameSite="None"></sessionState>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
@@ -115,7 +114,8 @@
     <add name="Excel03ConString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source={0};Extended Properties='Excel 8.0;HDR=YES'" />
     <add name="Excel07ConString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source={0}; Extended Properties='Excel 12.0 Xml; HDR=YES'" />
     <add name="IdentityConnection" connectionString="Data Source=tuleap.vanlanguni.edu.vn,18082;initial catalog=CP25Team04;persist security info=True;user id=CP25Team04;password=CP25Team04;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-  <add name="CP25Team04Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tuleap.vanlanguni.edu.vn,18082;initial catalog=CP25Team04;user id=CP25Team04;password=CP25Team04;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="CP25Team04Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tuleap.vanlanguni.edu.vn,18082;initial catalog=CP25Team04;user id=CP25Team04;password=CP25Team04;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
