--- a/MonthlyStatement/MonthlyStatement.csproj
+++ b/MonthlyStatement/MonthlyStatement.csproj
@@ -218,6 +218,7 @@
     <Compile Include="Areas\Department\Controllers\CommentsDepartmentController.cs" />
     <Compile Include="Areas\Department\Controllers\FormDepartmentReportController.cs" />
     <Compile Include="Areas\Department\Controllers\DepartmentReportController.cs" />
+    <Compile Include="Areas\Department\Controllers\ListDepartmentMemberController.cs" />
     <Compile Include="Areas\Department\Controllers\NotificationDepartmentController.cs" />
     <Compile Include="Areas\Department\Controllers\StatisticalController.cs" />
     <Compile Include="Areas\Department\DepartmentAreaRegistration.cs" />
@@ -269,7 +270,7 @@
     <Compile Include="Models\C__MigrationHistory.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Department.cs">
+    <Compile Include="Models\DepartmentList.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\DepartmentReport.cs">
@@ -1260,6 +1261,9 @@
     <Content Include="assets\FileMinhChung\ruzckxkkq782gdjm2sxlm6xvej7a01DanhSachNguoiDung-Import.xlsx" />
     <Content Include="assets\FileMinhChung\swocjt297owtotjy8orluwoiteo1efImport.xlsx" />
     <Content Include="assets\FileMinhChung\yyj95fmtkmz0uv03ktztx6er66r4owExport.xlsx" />
+    <Content Include="Areas\Department\Views\DepartmentReport\Index.cshtml" />
+    <Content Include="Areas\Department\Views\ListDepartmentMember\Create.cshtml" />
+    <Content Include="Areas\Department\Views\ListDepartmentMember\Index.cshtml" />
     <EntityDeploy Include="Models\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
@@ -1267,7 +1271,9 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
-    <Content Include="Areas\Department\Views\DepartmentReport\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Department\Views\ListDepartmentMember\Edit.cshtml" />
+    <Content Include="Areas\Department\Views\ListDepartmentMember\ListDepMem.cshtml" />
     <None Include="Properties\PublishProfiles\FTPProfile.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
