--- a/MonthlyStatement/MonthlyStatement.csproj
+++ b/MonthlyStatement/MonthlyStatement.csproj
@@ -1275,6 +1275,7 @@
     <Content Include="Areas\Department\Views\ListDepartmentMember\ListDepMem.cshtml" />
     <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Admin\Views\Statistical\Index_Statistical.cshtml" />
+    <Content Include="Areas\Department\Views\Statistical\Index_Statistical_Department.cshtml" />
     <None Include="Properties\PublishProfiles\FTPProfile.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
