--- a/MonthlyStatement/MonthlyStatement.csproj
+++ b/MonthlyStatement/MonthlyStatement.csproj
@@ -1040,9 +1040,18 @@
     <Content Include="assets\img\image-gallery\thumb\thumb-9.png" />
     <Content Include="assets\img\loading.gif" />
     <Content Include="assets\img\sidenav2.jpg" />
+    <Content Include="assets\img\vanlangcs3.jpg" />
     <Content Include="assets\img\video_Trim.mp4" />
+    <Content Include="assets\img\vlu\fomm.png" />
+    <Content Include="assets\img\vlu\form.png" />
+    <Content Include="assets\img\vlu\formm.png" />
+    <Content Include="assets\img\vlu\header.png" />
+    <Content Include="assets\img\vlu\khoa.png" />
+    <Content Include="assets\img\vlu\LGVL.png" />
     <Content Include="assets\img\vlu\logo-bg.png" />
     <Content Include="assets\img\vlu\logo.png" />
+    <Content Include="assets\img\vlu\logomoi.png" />
+    <Content Include="assets\img\vlu\logotrang.png" />
     <Content Include="assets\img\vlu\logoVL.jpg" />
     <Content Include="assets\img\posts\post11.png" />
     <Content Include="assets\img\posts\post12.png" />
